<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="parashit_summary_title">Customize your device</string>
    <string name="qs_settings_title">Quick settings</string>
    <string name="recents_settings_title">Recents</string>
    <string name="animations_settings_title">Animations</string>
    <string name="omniswitch_settings_title">OmniSwitch</string>
    <string name="various_shit_title">Various shit</string>
    <string name="print_restart">Restart</string>
    <string name="ui_tab">Interface</string>
    <string name="system_tab">System</string>
    <string name="multitasking_tab">Multi-Tasking</string>
    <string name="misc_tab">Miscellaneous</string>
    <string name="qs_header_category">Header options</string>
    <string name="qs_tiles_toggles_category">Tiles &amp; toggles</string>
    <string name="qs_header_icons_category">Header icons</string>
    <string name="systemui_restart_title">WARNING</string>
    <string name="systemui_restart_message">SystemUI will be restarted so that selected setting can be applied correctly.</string>
    <string name="restarting_ui">Restarting UI\u2026</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="navbar_settings_title">Navigation bar</string>
    <string name="navbar_interface_title">Interface</string>
    <string name="navbar_size">Bar size</string>
    <string name="navbar_mode">Navigation mode</string>
    <string name="navbar_visibility">Enable navigation bar</string>
    <string name="navbar_general_title">Advanced</string>
    <string name="navigation_bar_left_title">Left-handed mode</string>
    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
    <string name="info_pref_note_title">Note</string>
    <string name="smartbar_interface">SmartBar</string>
    <string name="icon_pack_picker_dialog_title">Icon packs</string>
    <string name="image_exceeds_max_allowed_size">Image must not exceed 512x512</string>
    <string name="invalid_icon_from_uri">Unable to load image from content provider</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="default_string">Default</string>
    <string name="reset">Reset</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="fling_settings">Fling settings</string>
    <string name="fling_interface">Fling</string>
    <string name="fling_enable_title">Enable Fling</string>
    <string name="fling_back_home_policy">Back and Home are required to be set at all times. To change a Back or Home assignment, set the desired assignment first</string>
    <string name="fling_split_bar_policy">When only a right or left action is assigned, the action applies to the full bar</string>
    <string name="fling_def_summary">No action set</string>
    <string name="fling_swipe_actions">Swipe gestures</string>
    <string name="fling_tap_actions">Tap gestures</string>
    <string name="fling_short_swipe_right">Right short swipe</string>
    <string name="fling_short_swipe_left">Left short swipe</string>
    <string name="fling_long_swipe_right">Right long swipe</string>
    <string name="fling_long_swipe_left">Left long swipe</string>
    <string name="fling_right_up_swipe">Right side swipe up</string>
    <string name="fling_left_up_swipe">Left side swipe up</string>
    <string name="fling_single_tap">Single tap right</string>
    <string name="fling_double_tap">Double tap right</string>
    <string name="fling_long_press">Long press right</string>
    <string name="fling_single_left_tap">Single tap left</string>
    <string name="fling_double_left_tap">Double tap left</string>
    <string name="fling_long_left_press">Long press left</string>
    <string name="long_swipe_portrait_title">Portrait</string>
    <string name="long_swipe_landscape_title">Landscape</string>
    <string name="portrait_right_swipe_title">Portrait right swipe</string>
    <string name="portrait_left_swipe_title">Portrait left swipe</string>
    <string name="landscape_right_swipe_title">Landscape right swipe</string>
    <string name="landscape_left_swipe_title">Landscape left swipe</string>
    <string name="vertical_up_swipe_title">Vertical up swipe</string>
    <string name="vertical_down_swipe_title">Vertical down swipe</string>
    <string name="up_swipe_title">Up swipe</string>
    <string name="down_swipe_title">Down swipe</string>
    <string name="long_swipe_reset">Reset</string>
    <string name="fling_advanced">Advanced</string>
    <string name="fling_long_swipe_title">Long swipe thresholds</string>
    <string name="fling_long_swipe_summary">Fine tune long swipe thresholds based on a percentage of Fling interface width or height</string>
    <string name="fling_trails_enable_title">Enable gesture trails</string>
    <string name="fling_trails_enable_summary">Show a trail on swipe gestures</string>
    <string name="fling_trails_color_title">Trail color</string>
    <string name="fling_trails_width_title">Trail width</string>
    <string name="fling_appearance">Appearance</string>
    <string name="fling_show_logo_title">Show Fling logo</string>
    <string name="fling_animate_logo_title">Animate logo</string>
    <string name="fling_animate_logo_summary">Logo animates on touch events</string>
    <string name="fling_logo_color">Logo color</string>
    <string name="fling_logo_custom_logo_pick_title">Custom logo icon</string>
    <string name="fling_logo_custom_logo_image_pick_title">Custom logo image</string>
    <string name="fling_logo_custom_logo_reset_title">Reset logo icon</string>
    <string name="fling_show_ripple_title">Show ripple</string>
    <string name="fling_show_ripple_summary">Ripple effect on touch events</string>
    <string name="fling_ripple_color">Ripple color</string>
    <string name="fling_longpress_timeout_label_left">Less delay</string>
    <string name="fling_longpress_timeout_label_right">More delay</string>
    <string name="fling_longpress_title">Long press delay</string>
    <string name="fling_longpress_summary">Increase or decrease the time it takes to execute a long press</string>
    <string name="pulse_help_policy_notice_title">About Pulse</string>
    <string name="pulse_help_policy_notice_summary">Pulse is a brilliant audio graphic visualizer on the navigation bar while music is playing. Pulse does not work with some audio sources while listening via the device\'s speaker.</string>
    <string name="pulse_settings">Pulse</string>
    <string name="pulse_settings_summary">Navigation bar audio graphic equalizer</string>
    <string name="fling_show_pulse_title">Show Pulse</string>
    <string name="fling_show_pulse_summary">Audio graphic equalizer on the navigation bar</string>
    <string name="pulse_render_mode_title">Render mode</string>
    <string name="pulse_render_mode_fading_bars">Fading blocks</string>
    <string name="pulse_render_mode_solid_lines">Solid lines</string>
    <string name="fling_pulse_color">Pulse color</string>
    <string name="eos_fling_lavalamp_title">Turn on Lava Lamp</string>
    <string name="eos_fling_lavalamp_summary">Pulse animates a smooth lava lamp style color blend</string>
    <string name="pulse_advanced_category">Advanced</string>
    <string name="pulse_legacy_mode_advanced_category">Fading blocks mode settings</string>
    <string name="pulse_custom_fudge_factor">Sanity level</string>
    <string name="lavamp_solid_speed_title">Lava Lamp speed</string>
    <string name="pulse_solid_units_count">Solid lines count</string>
    <string name="pulse_solid_units_opacity">Solid lines opacity</string>
    <string name="pulse_solid_dimen_category">Solid lines mode settings</string>
    <string name="qs_wifi_easy_toggle_title">WiFi easy toggle</string>
    <string name="qs_wifi_easy_toggle_summary">One click will turn WiFi on or off instead of taking you to details view</string>
    <string name="qs_bt_easy_toggle_title">Bluetooth easy toggle</string>
    <string name="qs_bt_easy_toggle_summary">One click will turn Bluetooth on or off instead of taking you to details view</string>
    <string name="qs_advanced_data_title">Data easy toggle</string>
    <string name="qs_advanced_data_summary">One click will turn Mobile Data on or off instead of taking you to details view</string>
    <string name="qs_rows_portrait_title">Rows (portrait)</string>
    <string name="qs_rows_landscape_title">Rows (landscape)</string>
    <string name="qs_columns_portrait_title">Columns (portrait)</string>
    <string name="qs_columns_landscape_title">Columns (landscape)</string>
    <string name="qqs_scroll_title">Scroll small QS tiles</string>
    <string name="qqs_scroll_summary">Allow scrolling through the small QS tiles</string>
    <string name="qs_tile_labels">QS tile labels</string>
    <string name="qs_tile_labels_summaryOn">Labels are shown</string>
    <string name="qs_tile_labels_summaryOff">Labels are hidden</string>
    <string name="show_clear_all_recents_button_title">Clear all FAB</string>
    <string name="show_clear_all_recents_button_summary_on">Clear all FAB are shown</string>
    <string name="show_clear_all_recents_button_summary_off">Clear all AOSP are shown</string>
    <string name="recents_clear_all_location_title">Clear all FAB location</string>
    <string name="systemui_recents_mem_display_title">Show Memory Bar</string>
    <string name="systemui_recents_mem_display_summary">Enable/disable RAM bar in recent app view</string>
    <string name="aosp_recents_title">AOSP recents</string>
    <string name="omniswitch_recents_title">OmniSwitch recents</string>
    <string name="recents_use_omniswitch_title">Use for a recents alternative</string>
    <string name="recents_use_omniswitch_summary">Use OmniSwitch instead of the default recents view</string>
    <string name="omniswitch_start_settings_title">OmniSwitch settings</string>
    <string name="omniswitch_start_settings_summary">View the settings for OmniSwitch</string>
    <string name="slim_recents_title">Slim recents</string>
    <string name="use_slim_recents_title">Use for a recents alternative</string>
    <string name="use_slim_recents_summary">Use Slim recents instead of the default recents view</string>
    <string name="slim_recents_settings_title">Slim recents settings</string>
    <string name="slim_recents_settings_summary">View the settings for slim recents</string>
</resources>