<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The ParaSHIT Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/recents_settings_title" >

    <PreferenceCategory
        android:key="stock_recents"
        android:title="@string/aosp_recents_title">

        <in.parashit.preference.SystemSettingSwitchPreference
            android:key="systemui_recents_mem_display"
            android:title="@string/systemui_recents_mem_display_title"
            android:summary="@string/systemui_recents_mem_display_summary"
            android:defaultValue="false" />

        <in.parashit.preference.SystemSettingSwitchPreference
            android:key="show_clear_all_recents"
            android:title="@string/show_clear_all_recents_button_title"
            android:summaryOn="@string/show_clear_all_recents_button_summary_on"
            android:summaryOff="@string/show_clear_all_recents_button_summary_off"
            android:defaultValue="false" />

        <ListPreference
            android:key="recents_clear_all_location"
            android:title="@string/recents_clear_all_location_title"
            android:entries="@array/recents_clear_all_location_entries"
            android:entryValues="@array/recents_clear_all_location_values"
            android:defaultValue="4"
            android:dependency="show_clear_all_recents" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="omni_recents"
        android:title="@string/omniswitch_recents_title" >

        <SwitchPreference
            android:key="recents_use_omniswitch"
            android:title="@string/recents_use_omniswitch_title"
            android:summary="@string/recents_use_omniswitch_summary"
            android:persistent="false" />

        <Preference
            android:key="omniswitch_start_settings"
            android:title="@string/omniswitch_start_settings_title"
            android:summary="@string/omniswitch_start_settings_summary"
            android:dependency="recents_use_omniswitch"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="slim_recents"
        android:title="@string/slim_recents_title">

        <in.parashit.preference.SystemSettingSwitchPreference
            android:key="use_slim_recents"
            android:title="@string/use_slim_recents_title"
            android:summary="@string/use_slim_recents_summary"
            android:defaultValue="false" />

        <PreferenceScreen
            android:key="slim_recents_panel"
            android:title="@string/slim_recents_settings_title"
            android:summary="@string/slim_recents_settings_summary"
            android:fragment="in.parashit.fragments.SlimRecentsPanel"
            android:dependency="use_slim_recents"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
