<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The ParaSHIT Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/qs_settings_title" >

    <PreferenceCategory
        android:key="qs_header"
        android:title="@string/qs_header_category" >

    </PreferenceCategory>

    <PreferenceCategory
        android:key="qs_tiles_toggles"
        android:title="@string/qs_tiles_toggles_category" >

        <in.parashit.preference.SeekBarPreference
            android:key="qs_rows_portrait"
            android:title="@string/qs_rows_portrait_title"
            android:max="4"
            settings:min="1"
            settings:units=""
            android:persistent="false" />

        <in.parashit.preference.SeekBarPreference
            android:key="qs_rows_landscape"
            android:title="@string/qs_rows_landscape_title"
            android:max="3"
            settings:min="1"
            settings:units=""
            android:persistent="false" />

        <in.parashit.preference.SeekBarPreference
            android:key="qs_columns_portrait"
            android:title="@string/qs_columns_portrait_title"
            android:max="6"
            settings:min="3"
            settings:units=""
            android:persistent="false" />

        <in.parashit.preference.SeekBarPreference
            android:key="qs_columns_landscape"
            android:title="@string/qs_columns_landscape_title"
            android:max="9"
            settings:min="3"
            settings:units=""
            android:persistent="false" />

        <in.parashit.preference.SystemSettingSwitchPreference
            android:key="qs_quickbar_scroll_enabled"
            android:title="@string/qqs_scroll_title"
            android:summary="@string/qqs_scroll_summary"
            android:defaultValue="false"/>

        <in.parashit.preference.SystemSettingSwitchPreference
            android:key="qs_tile_title_visibility"
            android:title="@string/qs_tile_labels"
            android:summaryOn="@string/qs_tile_labels_summaryOn"
            android:summaryOff="@string/qs_tile_labels_summaryOff"
            android:defaultValue="true" />

        <in.parashit.preference.SecureSettingSwitchPreference
            android:key="qs_bt_easy_toggle"
            android:title="@string/qs_bt_easy_toggle_title"
            android:summary="@string/qs_bt_easy_toggle_summary"
            android:defaultValue="false" />

        <in.parashit.preference.SecureSettingSwitchPreference
            android:key="qs_data_advanced"
            android:title="@string/qs_advanced_data_title"
            android:summary="@string/qs_advanced_data_summary"
            android:defaultValue="false" />

        <in.parashit.preference.SecureSettingSwitchPreference
            android:key="qs_wifi_easy_toggle"
            android:title="@string/qs_wifi_easy_toggle_title"
            android:summary="@string/qs_wifi_easy_toggle_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
